--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nimkoes.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nimkoes.github.io/portfolio",
+  "homepage": "https://nimkoes.github.io/tech-blog",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
