package.json 업데이트

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nimkoes tech blog",
+  "name": "nimkoes_tech_blog",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://nimkoes.github.io/tech-blog",
