--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.2.0",
+    "@types/mdx": "^2.0.13",
     "classnames": "^2.5.1",
     "next": "14.2.3",
     "react": "^18.3.1",
