--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
         "./src/*"
       ],
       "@resources/*": [
-        "./public/resources/*"
+        "./src/resources/*"
       ]
     }
   },
