--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/mdx": "^15.2.0",
     "@types/mdx": "^2.0.13",
     "classnames": "^2.5.1",
+    "lucide-react": "^0.477.0",
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
