--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/mdx": "^15.2.0",
     "@types/mdx": "^2.0.13",
     "classnames": "^2.5.1",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.477.0",
     "next": "14.2.3",
     "react": "^18.3.1",
@@ -22,7 +23,9 @@
     "react-markdown": "^10.0.0",
     "react-syntax-highlighter": "^15.6.1",
     "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.1"
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.8",
