--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "classnames": "^2.5.1",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.477.0",
-    "next": "14.2.3",
+    "next": "^14.2.24",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.0.0",
@@ -25,12 +26,15 @@
     "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
-    "remark-html": "^16.0.1"
+    "remark-html": "^16.0.1",
+    "remark-prism": "^1.3.6"
   },
   "devDependencies": {
     "@types/node": "^20.12.8",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "@types/remark-prism": "^1.3.7",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
