--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/mdx": "^2.0.13",
     "classnames": "^2.5.1",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.477.0",
     "next": "^14.2.24",
     "prismjs": "^1.29.0",
@@ -23,7 +24,9 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^10.0.0",
     "react-syntax-highlighter": "^15.6.1",
+    "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
+    "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
