--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.2.0",
     "@types/mdx": "^2.0.13",
+    "@types/react-responsive": "^8.0.8",
     "classnames": "^2.5.1",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.11.1",
@@ -23,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.0.0",
+    "react-responsive": "^10.0.1",
     "react-syntax-highlighter": "^15.6.1",
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
