--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
-    "remark-prism": "^1.3.6"
+    "remark-prism": "^1.3.6",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20.12.8",
