--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read
+  contents: write # ✅ contents: read → write (gh-pages push 가능하도록 변경)
   pages: write
   id-token: write
 
@@ -28,22 +28,35 @@ jobs:
   # Build job
   build-and-deploy:
     runs-on: ubuntu-latest
+    env: # ✅ 환경 변수 추가
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION: ${{ secrets.NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION }}
+      NEXT_PUBLIC_NAVER_SITE_VERIFICATION: ${{ secrets.NEXT_PUBLIC_NAVER_SITE_VERIFICATION }}
+      NEXT_PUBLIC_SITE_URL: "https://nimkoes.github.io"
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
           node-version: '18'
+
       - name: Install dependencies
         run: npm ci
+
       - name: Build
         run: npm run build
+
       - name: Copy verification files to root
         run: |
-          cp public/google-site-verification.html out/google-site-verification.html
+          cp public/google-site-verification.html out/google-site-verification.html || true
+          cp out/tech-blog/sitemap.xml out/sitemap.xml || true
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./out
+          keep_files: true # ✅ 기존 파일 유지 (sitemap.xml 등)
