--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
       NEXT_PUBLIC_SITE_URL: "https://nimkoes.github.io"
 
     steps:
-      - name: Checkout
+      - name: Checkout tech-blog
         uses: actions/checkout@v2
 
       - name: Setup Node
@@ -49,22 +49,31 @@ jobs:
       - name: Build
         run: npm run build
 
-      # sitemap.xml과 robots.txt를 레포지토리 루트로 복사하고 커밋
-      - name: Copy and commit search engine files
+      # nimkoes.github.io 레포지토리 클론
+      - name: Checkout nimkoes.github.io
+        uses: actions/checkout@v2
+        with:
+          repository: nimkoes/nimkoes.github.io
+          path: nimkoes.github.io
+          token: ${{ secrets.PAT_TOKEN }}  # Personal Access Token 필요
+
+      # sitemap.xml과 robots.txt를 nimkoes.github.io 레포지토리로 복사하고 커밋
+      - name: Update search engine files in nimkoes.github.io
         run: |
-          # sitemap.xml 복사
-          cp out/sitemap.xml sitemap.xml
+          # 파일 복사
+          cp out/sitemap.xml nimkoes.github.io/sitemap.xml
+          cp out/robots.txt nimkoes.github.io/robots.txt
           
-          # robots.txt 복사
-          cp out/robots.txt robots.txt
-          
-          # 변경사항 커밋
+          # nimkoes.github.io 레포지토리에 커밋 및 푸시
+          cd nimkoes.github.io
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
           git add sitemap.xml robots.txt
-          git commit -m "Update sitemap.xml and robots.txt" || echo "No changes to commit"
-          git push origin main || echo "No changes to push"
+          git commit -m "Update sitemap.xml and robots.txt from tech-blog" || echo "No changes to commit"
+          git push || echo "No changes to push"
+          cd ..
 
+      # tech-blog를 gh-pages에 배포
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
