--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/mdx": "^15.2.0",
     "@types/mdx": "^2.0.13",
     "@types/react-responsive": "^8.0.8",
+    "build": "^0.1.4",
     "classnames": "^2.5.1",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.11.1",
