fix: optimize next.config.js for GitHub Pages deployment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,7 +43,8 @@
     "src/types/**/*.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "out/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
