--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: write # ✅ contents: read → write (gh-pages push 가능하도록 변경)
+  contents: write
   pages: write
   id-token: write
 
@@ -28,7 +28,7 @@ jobs:
   # Build job
   build-and-deploy:
     runs-on: ubuntu-latest
-    env: # ✅ 환경 변수 추가
+    env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION: ${{ secrets.NEXT_PUBLIC_GOOGLE_SITE_VERIFICATION }}
       NEXT_PUBLIC_NAVER_SITE_VERIFICATION: ${{ secrets.NEXT_PUBLIC_NAVER_SITE_VERIFICATION }}
@@ -72,11 +72,14 @@ jobs:
           git commit -m "Update sitemap.xml and robots.txt from tech-blog" || echo "No changes to commit"
           git push || echo "No changes to push"
           cd ..
-
-      # tech-blog를 gh-pages에 배포
-      - name: Deploy to gh-pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./out
-          keep_files: true # ✅ 기존 파일 유지 (sitemap.xml 등)
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
